# agent-nexus

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  GOTCHAS.md  PRD.md  README.md  ROADMAP.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.scratch/: README.md
.scratch/_templates/: issue.md
.scratch/feat0001-init/: feat0001a.md  feat0001b.md  feat0001c.md  feat0001d.md
.scratch/feat0001-init-prototype/: feat0001a.md  feat0001b.md
.trellis/: .template-hashes.json  config.yaml  workflow.md
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: error.rs  lib.rs
crates/nexus-core/src/database/: mod.rs  schema.rs
crates/nexus-core/src/services/: agent_capabilities.rs  app_config.rs  cron.rs  distribution.rs  mod.rs  outbound_request_log.rs  paths.rs  placement.rs  project_custom_skill_propagation.rs  project_symlinks.rs  projects.rs  prompts.rs  provider_quota.rs  provider_trigger.rs  sessions.rs  skills.rs  symlink.rs  sync.rs  system_open.rs  util.rs  webdav.rs
crates/nexus-core/src/services/provider_quota/: claude_auth.rs  mod.rs  shared.rs
crates/nexus-core/src/services/provider_quota/providers/: claude_code.rs  codex.rs  configured.rs  copilot.rs  opencode_custom.rs  opencode_go.rs  qoder.rs
crates/nexus-core/src/services/sync/: file_state.rs  local_copy.rs  session_backup_reconciler.rs  task_lifecycle.rs
crates/nexus-core/tests/: agent_capabilities.rs  app_config.rs  project_service.rs  project_symlink_inventory.rs  prompt_service.rs  provider_quota.rs  provider_trigger.rs  session_service.rs  skill_service.rs  sync_service.rs
docs/adr/: 0001-动态链接 SQLite.md  0002-deepseek-cloudfront-endpoint.md  0003-agent-capability-cross-language-ssot.md  0003-asset-custom-sources.md  adr0001-产品技术栈和架构设计.md  adr0002-数据库 Schema 设计.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
prototype/: Agent Nexus.dc.html  Project.dc.html  Prompt.dc.html  Provider.dc.html  Session.dc.html  Settings.dc.html  Skill.dc.html  Sync.dc.html  nexus-data.js
scripts/: with-sqlite-windows.ps1  with-sqlite.mjs
src-react/: App.tsx  README.md  index.css  index.html  main.tsx  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  store.rs  tray.rs
src-tauri/src/commands/: agent_capabilities.rs  app.rs  app_config.rs  mod.rs  project_symlinks.rs  projects.rs  prompts.rs  providers.rs  sessions.rs  skills.rs  sync.rs  tray.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/services/: mod.rs  paths.rs  projects.rs  skills.rs  symlink.rs  sync.rs  webdav.rs
src-tauri/tests/: project_service.rs  skill_service.rs  sync_service.rs
(+289 files in other folders)
