[package]
name = "agent-nexus"
version = "0.1.0"
description = "Agent Nexus desktop shell"
authors = ["lumiarna"]
edition = "2021"

[lib]
name = "agent_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.0", features = [] }
thiserror = "2.0"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
rusqlite = "0.32"

[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
