[package]
name = "agent-nexus"
version = "0.1.0"
description = "Agent Nexus desktop shell"
authors = ["lumiarna"]
edition = "2021"

[lib]
name = "agent_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
nexus-core = { path = "../crates/nexus-core" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.0", features = [] }
