[package]
name = "agent-nexus"
version = "0.1.0"
description = "Agent Nexus desktop shell"
authors = ["lumiarna"]
edition = "2021"

[lib]
name = "agent_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
nexus-core = { path = "../crates/nexus-core" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.0", features = ["tray-icon"] }
# Tray icon rendering: brand-color rounded square + the "shortest window used"
# number rasterized with a bundled font (assets/tray-digits.ttf, Roboto Bold, Apache-2.0).
tiny-skia = "0.11"
ab_glyph = "0.2"
