[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "system-proxy"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
junction = "2.0"
rusqlite = "0.32"

[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
serial_test = "3.1"
tempfile = "3.14"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
